agregando linea al hero

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <div class="hero__overlay"></div>
         <div class="hero__content">
             <h1 class="hero__title">OFICINAS MÓVILES A TÚ MEDIDA</h1>
+            <div class="hero__line"></div>
             <p class="hero__subtitle">Soluciones a la medida para tú proyecto ó tú estilo de vida</p>
             <a href="#contacto" class="hero__button">¡Contactanos! <i class="bi bi-arrow-right"></i></a>
         </div>
