--- a/oficinas-moviles.html
+++ b/oficinas-moviles.html
@@ -55,17 +55,17 @@
     <!-- ======= nav Desktop ======= -->
     <nav class="nav">  
         <div class="nav__logo">
-            <a href="#home" class="nav__logo-link">
+            <a href="index.html#home" class="nav__logo-link">
                 <img src="./build/img/logo.png" alt="Logo" class="nav__logo-img">
 
             </a>
         </div>
 
         <ul class="nav__links">
-            <li class="nav__links-item"><a href="#home" class="nav__links-link">Inicio</a></li>
-            <li class="nav__links-item"><a href="#nosotros" class="nav__links-link">Nosotros</a></li>
+            <li class="nav__links-item"><a href="index.html#home" class="nav__links-link">Inicio</a></li>
+            <li class="nav__links-item"><a href="index.html#nosotros" class="nav__links-link">Nosotros</a></li>
             <li class="nav__links-item nav__links-dropdown">
-                <a href="#productos" class="nav__links-link">
+                <a href="index.html#productos" class="nav__links-link">
                     Productos <i class="bi bi-caret-down-fill"></i>
                 </a>
                 <ul class="nav__dropdown-menu">
@@ -76,8 +76,8 @@
                 </ul>
             </li>
             
-            <li class="nav__links-item"><a href="#testimoniales" class="nav__links-link">Reseñas</a></li>
-            <li class="nav__links-item"><a href="#contacto" class="nav__links-link">Contacto</a></li>
+            <li class="nav__links-item"><a href="index.html#testimoniales" class="nav__links-link">Reseñas</a></li>
+            <li class="nav__links-item"><a href="index.html#contacto" class="nav__links-link">Contacto</a></li>
         </ul>
 
         <a href="index.html#contacto" class="nav__button">
@@ -104,11 +104,11 @@
         <nav class="navM__menu" id="navM-menu">
             <ul class="navM__list">
                 <li class="navM__item">
-                    <a href="#home" class="navM__link">Inicio</a>
+                    <a href="index.html#home" class="navM__link">Inicio</a>
                 </li>
 
                 <li class="navM__item">
-                    <a href="#nosotros" class="navM__link">Nosotros</a>
+                    <a href="index.html#nosotros" class="navM__link">Nosotros</a>
                 </li>
 
                 <li class="navM__item navM__dropdown">
@@ -116,19 +116,19 @@
                         Productos <i class="fa-solid fa-caret-down"></i>
                     </button>
                     <ul class="navM__dropdown-menu">
-                        <li><a href="#oficinas-moviles" class="navM__link">Oficinas Móviles</a></li>
-                        <li><a href="#dormitorios-moviles" class="navM__link">Dormitorios Móviles</a></li>
-                        <li><a href="#edificios-moviles" class="navM__link">Edificios Móviles</a></li>
-                        <li><a href="#contenedores" class="navM__link">Contenedores</a></li>
+                        <li><a href="oficinas-moviles.html" class="navM__link">Oficinas Móviles</a></li>
+                        <li><a href="dormitorios-moviles.html" class="navM__link">Dormitorios Móviles</a></li>
+                        <li><a href="edificios-prefabricados.html" class="navM__link">Edificios Móviles</a></li>
+                        <li><a href="contenedores.html" class="navM__link">Contenedores</a></li>
                     </ul>
                 </li>
 
                 <li class="navM__item">
-                    <a href="#testimoniales" class="navM__link">Reseñas</a>
+                    <a href="index.html#testimoniales" class="navM__link">Reseñas</a>
                 </li>
 
                 <li class="navM__item">
-                    <a href="#contacto" class="navM__link">Contacto</a>
+                    <a href="index.html#contacto" class="navM__link">Contacto</a>
                 </li>
 
                 <li class="navM__item">
