modificando imagenes de oficinas y modificando headers de los productos

--- a/dormitorios-moviles.html
+++ b/dormitorios-moviles.html
@@ -150,7 +150,7 @@
     <main class="hero-dormitorios">
         <div class="hero__overlay"></div>
         <div class="hero__content">
-            <h1 class="hero__title">Venta de <span class="hero--yellow"> Oficinas Móviles</span></h1>
+            <h1 class="hero__title">Venta de <span class="hero--yellow">dormitorios moviles </span>a tú medida</h1>
             <div class="hero__line"></div>
             <p class="hero__subtitle">Oficinas móviles diseñadas para las necesidades de tú proyecto</p>
             <a href="#contacto" class="hero__button">¡Contacta a un asesor! <i class="bi bi-arrow-right"></i></a>
