--- a/oficinas-moviles.html
+++ b/oficinas-moviles.html
@@ -210,49 +210,49 @@
         <div class="gallery__grid">
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-1.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-1.webp" type="image/webp">
-                        <img src="./build/img/herramientas-1.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-1.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-1.webp" type="image/webp">
+                        <img src="./build/img/oficina-1.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
 
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-2.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-2.webp" type="image/webp">
-                        <img src="./build/img/herramientas-2.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-2.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-2.webp" type="image/webp">
+                        <img src="./build/img/oficina-2.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
 
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-3.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-3.webp" type="image/webp">
-                        <img src="./build/img/herramientas-3.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-3.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-3.webp" type="image/webp">
+                        <img src="./build/img/oficina-3.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
 
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-4.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-4.webp" type="image/webp">
-                        <img src="./build/img/herramientas-4.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-4.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-4.webp" type="image/webp">
+                        <img src="./build/img/oficina-4.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
 
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-5.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-5.webp" type="image/webp">
-                        <img src="./build/img/herramientas-5.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-5.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-5.webp" type="image/webp">
+                        <img src="./build/img/oficina-5.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
 
                 <div class="gallery__item">
                     <picture class="gallery__item-img">
-                        <source srcset="./build/img/herramientas-6.avif" type="image/avif">
-                        <source srcset="./build/img/herramientas-6.webp" type="image/webp">
-                        <img src="./build/img/herramientas-6.jpg" alt="herramientas" loading="lazy">
+                        <source srcset="./build/img/oficina-6.avif" type="image/avif">
+                        <source srcset="./build/img/oficina-6.webp" type="image/webp">
+                        <img src="./build/img/oficina-6.jpg" alt="herramientas" loading="lazy">
                     </picture>
                 </div>
         </div>     
