--- a/contenedores.html
+++ b/contenedores.html
@@ -150,9 +150,9 @@
     <main class="hero-contenedores">
         <div class="hero__overlay"></div>
         <div class="hero__content">
-            <h1 class="hero__title">Venta de <span class="hero--yellow"> Oficinas Móviles</span></h1>
+            <h1 class="hero__title">VENTA DE <span class="hero--yellow"> CONTENEDORES </span>A TÚ MEDIDA</h1>
             <div class="hero__line"></div>
-            <p class="hero__subtitle">Oficinas móviles diseñadas para las necesidades de tú proyecto</p>
+            <p class="hero__subtitle">Contenedores diseñadas para las necesidades de tú proyecto</p>
             <a href="#contacto" class="hero__button">¡Contacta a un asesor! <i class="bi bi-arrow-right"></i></a>
         </div>
     </main>
