cambiando imagenes y textos se los productos

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <ul class="nav__dropdown-menu">
                     <li><a href="oficinas-moviles.html">Oficinas Móviles</a></li>
                     <li><a href="dormitorios-moviles.html">Dormitorios Móviles</a></li>
-                    <li><a href="edificios-prefabricados.html">Edificios Móviles</a></li>
+                    <li><a href="edificios-prefabricados.html">Edificios Prefabricados</a></li>
                     <li><a href="contenedores.html">Contenedores</a></li>
                 </ul>
             </li>
@@ -118,7 +118,7 @@
                     <ul class="navM__dropdown-menu">
                         <li><a href="oficinas-moviles.html" class="navM__link">Oficinas Móviles</a></li>
                         <li><a href="dormitorios-moviles.html" class="navM__link">Dormitorios Móviles</a></li>
-                        <li><a href="edificios-prefabricados.html" class="navM__link">Edificios Móviles</a></li>
+                        <li><a href="edificios-prefabricados.html" class="navM__link">Edificios Prefabricados</a></li>
                         <li><a href="contenedores.html" class="navM__link">Contenedores</a></li>
                     </ul>
                 </li>
