--- a/oficinas-moviles.html
+++ b/oficinas-moviles.html
@@ -71,7 +71,7 @@
                 <ul class="nav__dropdown-menu">
                     <li><a href="oficinas-moviles.html">Oficinas Móviles</a></li>
                     <li><a href="dormitorios-moviles.html">Dormitorios Móviles</a></li>
-                    <li><a href="edificios-prefabricados.html">Edificios Móviles</a></li>
+                    <li><a href="edificios-prefabricados.html">Edificios Prefabricados</a></li>
                     <li><a href="contenedores.html">Contenedores</a></li>
                 </ul>
             </li>
@@ -118,7 +118,7 @@
                     <ul class="navM__dropdown-menu">
                         <li><a href="oficinas-moviles.html" class="navM__link">Oficinas Móviles</a></li>
                         <li><a href="dormitorios-moviles.html" class="navM__link">Dormitorios Móviles</a></li>
-                        <li><a href="edificios-prefabricados.html" class="navM__link">Edificios Móviles</a></li>
+                        <li><a href="edificios-prefabricados.html" class="navM__link">Edificios Prefabricados</a></li>
                         <li><a href="contenedores.html" class="navM__link">Contenedores</a></li>
                     </ul>
                 </li>
@@ -162,7 +162,7 @@
         <div class="nosotros__grid">
             <div class="nosotros__box">
                     <h2 class="nosotros__heading">Venta de 
-                          <span class="nosotros--blue">Oficinas Móviles en México</span></h2>
+                          <span class="nosotros--blue">Oficinas Móviles </span>en México</h2>
                     <div class="nosotros__line"></div>
             </div>
     
