--- a/dormitorios-moviles.html
+++ b/dormitorios-moviles.html
@@ -10,16 +10,16 @@
     <link rel="apple-touch-icon" type="image/png" href="./build/img/icon.png">
 
     <!-- -- Titulo -- -->
-    <title data-section="title" data-value="title">Móvil ACH | Venta de Oficinas Móviles en México</title>
+    <title data-section="title" data-value="title">Móvil ACH | Venta de Dormitorios Móviles en México</title>
 
     <!-- -- Descripcion -- -->
-    <meta name="description" content="Venta de Oficinas móviles personalizadas en México. Fabricamos espacios portátiles de trabajo ideales para proyectos temporales y trabajo remoto. Envíos a toda la República. Comodidad, seguridad, calidad al mejor precio.">
+    <meta name="description" content="Venta de dormitorios móviles en México. Espacios cómodos, funcionales y transportables para obras, campamentos, minería y más. Entrega en toda la República. Confort, seguridad y calidad al mejor precio.">
 
     <!-- -- Keywords -- -->
     <meta name="keywords" content="oficinas móviles, oficinas móviles México, oficinas móviles Chihuahua, oficinas móviles personalizadas, espacios portátiles de trabajo, oficinas para trabajo remoto, oficinas temporales, fabricación de oficinas móviles, oficinas móviles a medida, oficinas móviles para eventos, oficinas móviles económicas, Móvil ACH">
 
     <!-- -- Canonical -- -->
-    <link rel="canonical" href="https://movilach.com/oficinas-moviles.html" />
+    <link rel="canonical" href="https://movilach.com/dormitorios-moviles.html" />
 
     <!-- -- Indexacion -- -->
     <meta name="robots" content="index, follow">
@@ -33,7 +33,23 @@
     <!-- --- Estilos --- -->
     <link rel="stylesheet" href="../build/css/app.css">
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Venta de Dormitorios Móviles en México | Móvil ACH" />
+    <meta property="og:description" content="Dormitorios móviles confortables y funcionales para campamentos, obras y minería. Calidad garantizada." />
+    <meta property="og:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+    <meta property="og:url" content="https://movilach.com/dormitorios-moviles.html" />
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Venta de Dormitorios Móviles en México | Móvil ACH" />
+    <meta name="twitter:description" content="Espacios cómodos y listos para instalar en cualquier punto del país." />
+    <meta name="twitter:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+
+    <!-- Image Source -->
+    <link rel="image_src" href="https://movilach.com/build/img/oficinas-moviles.jpg" />
     
+    <!-- Schema -->
+    <html itemscope itemtype="https://schema.org/Product">
+
 </head>
 <body>
     <!-- ======= header ======= -->
