--- a/oficinas-moviles.html
+++ b/oficinas-moviles.html
@@ -33,7 +33,23 @@
     <!-- --- Estilos --- -->
     <link rel="stylesheet" href="../build/css/app.css">
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Venta de Oficinas Móviles en México | Móvil ACH" />
+    <meta property="og:description" content="Oficinas móviles resistentes, seguras y funcionales para construcción, minería y proyectos remotos. Envíos nacionales." />
+    <meta property="og:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+    <meta property="og:url" content="https://movilach.com/oficinas-moviles.html" />
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Venta de Oficinas Móviles en México | Móvil ACH" />
+    <meta name="twitter:description" content="Fabricamos oficinas móviles equipadas listas para usar en todo México." />
+    <meta name="twitter:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+
+    <!-- Image Source -->
+    <link rel="image_src" href="https://movilach.com/build/img/oficinas-moviles.jpg" />
     
+    <!-- Schema -->
+    <html itemscope itemtype="https://schema.org/Product">
+
 </head>
 <body>
     <!-- ======= header ======= -->
