--- a/edificios-prefabricados.html
+++ b/edificios-prefabricados.html
@@ -10,16 +10,16 @@
     <link rel="apple-touch-icon" type="image/png" href="./build/img/icon.png">
 
     <!-- -- Titulo -- -->
-    <title data-section="title" data-value="title">Móvil ACH | Venta de Oficinas Móviles en México</title>
+    <title data-section="title" data-value="title">Móvil ACH | Venta de Edificios Prefabricados en México</title>
 
     <!-- -- Descripcion -- -->
-    <meta name="description" content="Venta de Oficinas móviles personalizadas en México. Fabricamos espacios portátiles de trabajo ideales para proyectos temporales y trabajo remoto. Envíos a toda la República. Comodidad, seguridad, calidad al mejor precio.">
+    <meta name="description" content="Venta de edificios prefabricados en México. Soluciones rápidas, resistentes y personalizadas para oficinas, aulas, dormitorios, comedores y más. Envíos a todo el país. Calidad garantizada">
 
     <!-- -- Keywords -- -->
     <meta name="keywords" content="oficinas móviles, oficinas móviles México, oficinas móviles Chihuahua, oficinas móviles personalizadas, espacios portátiles de trabajo, oficinas para trabajo remoto, oficinas temporales, fabricación de oficinas móviles, oficinas móviles a medida, oficinas móviles para eventos, oficinas móviles económicas, Móvil ACH">
 
     <!-- -- Canonical -- -->
-    <link rel="canonical" href="https://movilach.com/oficinas-moviles.html" />
+    <link rel="canonical" href="https://movilach.com/edificios-prefabricados.html" />
 
     <!-- -- Indexacion -- -->
     <meta name="robots" content="index, follow">
@@ -33,7 +33,22 @@
     <!-- --- Estilos --- -->
     <link rel="stylesheet" href="../build/css/app.css">
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="Venta de Edificios Prefabricados en México | Móvil ACH" />
+    <meta property="og:description" content="Edificios prefabricados resistentes y modulares para oficinas, aulas, dormitorios y más. Fabricación nacional." />
+    <meta property="og:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+    <meta property="og:url" content="https://movilach.com/edificios-prefabricados.html" />
     
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Venta de Edificios Prefabricados en México | Móvil ACH" />
+    <meta name="twitter:description" content="Soluciones rápidas, eficientes y personalizables para tu proyecto." />
+    <meta name="twitter:image" content="https://movilach.com/build/img/oficinas-moviles.jpg" />
+    
+    <!-- Image Source -->
+    <link rel="image_src" href="https://movilach.com/build/img/oficinas-moviles.jpg" />
+
+    <!-- Schema -->
+    <html itemscope itemtype="https://schema.org/Product">
 </head>
 <body>
     <!-- ======= header ======= -->
