--- a/dormitorios-moviles.html
+++ b/dormitorios-moviles.html
@@ -4,6 +4,9 @@
     <!-- -- Meta -- -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- -- Google search console -- -->
+    <meta name="google-site-verification" content="jQgqm_9l8oozCQOSiVaeHR-4YlFJ7NrM1cJGqLvC_4I" />
 
     <!-- -- Favicon -- -->
     <link rel="icon" href="./build/img/icon.png" type="image/x-icon">
