terminando seccion remolques y agregando modificaciones en copywriting

--- a/dormitorios-moviles.html
+++ b/dormitorios-moviles.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" type="image/png" href="./build/img/icon.png">
 
     <!-- -- Titulo -- -->
-    <title data-section="dormitorios-moviles" data-value="title">Móvil ACH | Venta de Dormitorios Móviles en México</title>
+    <title data-section="dormitorios-moviles" data-value="title">Movil ACH | Venta de Dormitorios Móviles en México</title>
 
     <!-- -- Descripcion -- -->
     <meta name="description" content="Venta de dormitorios móviles en México. Espacios cómodos, funcionales y transportables para obras, campamentos, minería y más. Entrega en toda la República. Confort, seguridad y calidad al mejor precio.">
@@ -114,6 +114,7 @@
                     <li><a href="dormitorios-moviles.html" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                     <li><a href="edificios-prefabricados.html" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                     <li><a href="contenedores.html" data-section="nav" data-value="products4">Contenedores</a></li>
+                    <li><a href="remolques.html" data-section="nav" data-value="products5">Remolques</a></li>
                 </ul>
             </li>
             
@@ -131,7 +132,7 @@
     <!-- ======= nav Mobile ======= -->
     <div class="navM">
         <div class="navM__data">
-            <a class="navM__logo" href="#home">
+            <a class="navM__logo" href="index.html#home">
                 <img class="navM__logo-img" src="./build/img/logo.png" alt="logo">
             </a>
 
@@ -161,6 +162,7 @@
                         <li><a href="dormitorios-moviles.html" class="navM__link" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                         <li><a href="edificios-prefabricados.html" class="navM__link" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                         <li><a href="contenedores.html" class="navM__link" data-section="nav" data-value="products4">Contenedores</a></li>
+                        <li><a href="remolques.html" class="navM__link" data-section="nav" data-value="products5">Remolques</a></li>
                     </ul>
                 </li>
 
