--- a/edificios-prefabricados.html
+++ b/edificios-prefabricados.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" type="image/png" href="./build/img/icon.png">
 
     <!-- -- Titulo -- -->
-    <title data-section="edificios-prefabricados" data-value="title">Móvil ACH | Venta de Edificios Prefabricados en México</title>
+    <title data-section="edificios-prefabricados" data-value="title">Movil ACH | Venta de Edificios Prefabricados en México</title>
 
     <!-- -- Descripcion -- -->
     <meta name="description" content="Venta de edificios prefabricados en México. Soluciones rápidas, resistentes y personalizadas para oficinas, aulas, dormitorios, comedores y más. Envíos a todo el país. Calidad garantizada">
@@ -113,6 +113,7 @@
                     <li><a href="dormitorios-moviles.html" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                     <li><a href="edificios-prefabricados.html" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                     <li><a href="contenedores.html" data-section="nav" data-value="products4">Contenedores</a></li>
+                    <li><a href="remolques.html" data-section="nav" data-value="products5">Remolques</a></li>
                 </ul>
             </li>
             
@@ -130,7 +131,7 @@
     <!-- ======= nav Mobile ======= -->
     <div class="navM">
         <div class="navM__data">
-            <a class="navM__logo" href="#home">
+            <a class="navM__logo" href="index.html#home">
                 <img class="navM__logo-img" src="./build/img/logo.png" alt="logo">
             </a>
 
@@ -160,6 +161,7 @@
                         <li><a href="dormitorios-moviles.html" class="navM__link" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                         <li><a href="edificios-prefabricados.html" class="navM__link" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                         <li><a href="contenedores.html" class="navM__link" data-section="nav" data-value="products4">Contenedores</a></li>
+                        <li><a href="remolques.html" class="navM__link" data-section="nav" data-value="products5">Remolques</a></li>
                     </ul>
                 </li>
 
