--- a/contenedores.html
+++ b/contenedores.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" type="image/png" href="./build/img/icon.png">
 
     <!-- -- Titulo -- -->
-    <title data-section="contenedores" data-value="title">Móvil ACH | Venta de Contenedores Dumpsters en México</title>
+    <title data-section="contenedores" data-value="title">Movil ACH | Venta de Contenedores Dumpsters en México</title>
 
     <!-- -- Descripcion -- -->
     <meta name="description" content="Venta de contenedores tipo dumpster, contenedores para construcción y contenedores para residuos en México. Fabricamos soluciones resistentes y funcionales para obras, industria y limpieza. Envíos a toda la República. Calidad y precio garantizados.">
@@ -113,6 +113,7 @@
                     <li><a href="dormitorios-moviles.html" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                     <li><a href="edificios-prefabricados.html" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                     <li><a href="contenedores.html" data-section="nav" data-value="products4">Contenedores</a></li>
+                    <li><a href="remolques.html" data-section="nav" data-value="products5">Remolques</a></li>
                 </ul>
             </li>
             
@@ -130,7 +131,7 @@
     <!-- ======= nav Mobile ======= -->
     <div class="navM">
         <div class="navM__data">
-            <a class="navM__logo" href="#home">
+            <a class="navM__logo" href="index.html#home">
                 <img class="navM__logo-img" src="./build/img/logo.png" alt="logo">
             </a>
 
@@ -160,6 +161,7 @@
                         <li><a href="dormitorios-moviles.html" class="navM__link" data-section="nav" data-value="products2">Dormitorios Móviles</a></li>
                         <li><a href="edificios-prefabricados.html" class="navM__link" data-section="nav" data-value="products3">Edificios Prefabricados</a></li>
                         <li><a href="contenedores.html" class="navM__link" data-section="nav" data-value="products4">Contenedores</a></li>
+                        <li><a href="remolques.html" class="navM__link" data-section="nav" data-value="products5">Remolques</a></li>
                     </ul>
                 </li>
 
@@ -181,6 +183,8 @@
                     </a>
                 </li>
             </ul>
+
+            
         </nav>
     </div>
 
